some contrast fixes

--- a/larry/i3-site/public/css/app.css
+++ b/larry/i3-site/public/css/app.css
@@ -233,7 +233,7 @@ p {
   color: #4fc3f7; /* light blue */
 }
 .phrase-animator-word-1 {
-  color: #0d47a1; /* dark blue */
+color: #42a5f5; /* lighter blue */
 }
 
 h2 {
